[tool.poetry]
name = "notion-todoist-sync"
version = "0.1.0"
description = "A Python script that synchronizes tasks between Notion and Todoist with support for parent-child relationships"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.9"
notion-client = "^2.0.0"
todoist-api-python = "^2.1.3"
python-dotenv = "^1.0.0"
python-crontab = "^2.7.1"
croniter = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync = "run_sync:main"
